--- a/Tea Cozy Project/index.html
+++ b/Tea Cozy Project/index.html
@@ -89,8 +89,19 @@
     </section>
 
     <section class="locations" id="locations">
-      <h2>Section 3</h2>
-      <p>This is the content of the third main section.</p>
+      <h2>Locations</h2>
+      <div class="stores">
+        <div class="location">
+          <h3>Downtown</h3>
+        </div>
+        <div class="location">
+          <h3>East Bayside</h3>
+        </div>
+        <div class="location">
+          <h3>Oakdale</h3>
+        </div>
+      </div>
+      <h2 class="cozy">The Tea Cozy</h2>
     </section>
 
     <!-- Your webpage content goes here -->
