Edit locations section with correct dimensions for elements

--- a/Tea Cozy Project/index.html
+++ b/Tea Cozy Project/index.html
@@ -89,10 +89,11 @@
     </section>
 
     <section class="locations" id="locations">
-      <h2>Locations</h2>
+      <h2 id="locations-header">Locations</h2>
       <div class="stores">
         <div class="location">
           <h3>Downtown</h3>
+
         </div>
         <div class="location">
           <h3>East Bayside</h3>
@@ -104,6 +105,8 @@
       <h2 class="cozy">The Tea Cozy</h2>
     </section>
 
-    <!-- Your webpage content goes here -->
+    <footer>
+      <p>text goes here</p>
+    </footer>
   </body>
 </html>
